added wedding section info

--- a/index.html
+++ b/index.html
@@ -577,11 +577,42 @@
             <div class="container banner d-flex flex-column animation-up">
                 <img src="./src/img/logopattern.webp" alt="Ondas amarelas" id="brand-logo-pattern" draggable="false" class="pb-1 mb-3 mt-5">
                 <h2 class="motto h2 text text-center animation-down" id="faq-h2">Casamento Coletivo</h2>
-                <p class="text text-center animation-down">
-                    <a href="./src/pages/form.html" target="_blank" class="text-reset links-socials">Clique aqui para fazer o seu cadastro no Casamento Comunitário.</a>
-                </p>
+                <div class="container banner d-sm-block d-md-flex d-lg-flex pt-5 pb-5 mx-auto gap-5">
+                    <!--Left Content-->
+                    <video class="video-reels-wedding reels-card mx-auto d-block mb-4" 
+                        loop muted playsinline controls poster="./src/img/posterwedding.webp">
+                        <source src="./src/video/casamentocoletivo.mp4" type="video/mp4">
+                    </video>
+                    <!--Right Content-->
+                    <div>
+                        <p class="text-start">
+                            <strong>Casamento Coletivo - Cartório Ribeirão da Ilha</strong><br>
+                            No dia 01/11/2025, às 15h, vamos celebrar o amor em grande estilo no Aeroporto Internacional de Florianópolis, considerado o mais bonito do Brasil. <br>
+                            <br>
+                            A cerimônia será gratuita exclusivamente para os noivos que comprovarem hipossuficiência econômica (ou seja, não tiverem condições de arcar com as custas do casamento).
+                            <br>
+                            Para participar, é necessário dar entrada na habilitação no Cartório Ribeirão da Ilha, apresentando a documentação obrigatória:<br><br>
+                            📑 Documento de identidade e CPF;<br>
+                            📑 Comprovante de residência (conta de água, luz, telefone fixo ou internet, ou declaração do proprietário do imóvel);<br>
+                            📑 Certidão de nascimento atualizada ou certidão de casamento com averbação do divórcio, se for o caso;<br>
+                            📑 Documentos de duas testemunhas.<br>
+                            <br>
+                            Durante o processo, os noivos poderão escolher o regime de bens (como comunhão parcial ou separação). Havendo necessidade de pacto antenupcial, nossa equipe oferecerá toda a orientação.
+                            <br>
+                            <br>
+                            Uma oportunidade única de viver esse momento especial em um cenário inesquecível.<br>
+                            <br>
+                            Para se inscrever, procure o Cartório Ribeirão da Ilha e dê entrada no processo de habilitação dentro do prazo legal
+                        </p>
+                        <div class="container-wedding-cta">
+                            <p class="text text-center animation-down">
+                                <a href="./src/pages/form.html" target="_blank" class="text-reset links-socials">Clique aqui para fazer o seu cadastro no Casamento Comunitário.</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
                 
-
+                
                 <!--Media-->
                 <img src="./src/img/logopattern.webp" alt="Ondas amarelas" id="brand-logo-pattern" draggable="false" class="pb-1 mb-3 mt-5">
                 <h2 class="motto h2 text text-center animation-down" id="faq-h2">Eventos, Equipe e Atividades</h2>
