added date field input for users on wedding form

--- a/src/pages/form.html
+++ b/src/pages/form.html
@@ -160,13 +160,15 @@
                 <p class="input-padding">Documentos das duas testemunhas:</p>
                 <input type="file" name="doc_testemunhas[]" accept=".pdf,.jpg,.jpeg,.png" multiple required>
                 <!--Booking-->
+                <div class="note">
+                    * É obrigatório comparecer ao Cartório Ribeirão da Ilha para entregar os documentos e realizar a habilitação após a inscrição online. Agende o seu comparecimento:
+                </div>
+                <label for="data_agendamento" class="mb-2 pt-3">Selecione a Data:</label>
+                <input type="date" id="data_agendamento" name="data_agendamento" min="2025-09-10" max="2025-10-17" required>
+                <small class="small-note">* Escolha um dia da semana entre 10/09 e 17/10.</small>
                 <label for="agendamento" class="mb-2 pt-3">Agendamento de Horário no Cartório:</label>
                 <input type="time" id="agendamento" name="agendamento" min="09:00" max="14:00" required>
                 <small class="small-note">* Escolha um horário entre 9h e 14h.</small>
-                <div class="note">
-                    * É obrigatório comparecer ao Cartório Ribeirão da Ilha para entregar os documentos e realizar a habilitação após a inscrição online.
-                </div>
-
                 <button id="submit-form-btn" class="btn btn-send btn-primary btn-block shadow-sm mt-3 send-wedding-form-btn" type="submit">Enviar Inscrição</button>
                 </form>
 
@@ -291,7 +293,6 @@
         const cpfInput        = document.getElementById("cpf");
         const whatsappInput   = document.getElementById("whatsapp");
         const telefoneInput   = document.getElementById("telefone");
-
         // Masks
         identidadeInput.addEventListener('input', function() {
             let x = this.value.replace(/\D/g,'').slice(0,9);
@@ -324,7 +325,7 @@
             this.value = this.value.replace(/\D/g,'');
             verificarFormulario();
         });
-        // Atualiza cor do campo
+        // Update field color
         function atualizarCorCampo(input, tamanhoExato) {
             const numeros = input.value.replace(/\D/g,'');
             if(numeros.length === tamanhoExato) {
@@ -335,7 +336,30 @@
                 input.classList.remove("input-completo");
             }
         }
-        // Verifica se formulário pode habilitar botão
+        // Only week days
+        const inputData = document.getElementById("data_agendamento");
+        inputData.addEventListener("input", function () {
+            const dataSelecionada = new Date(this.value);
+            const diaSemana = dataSelecionada.getUTCDay(); // 0=Sunday, 6=Saturday
+            if (diaSemana === 0 || diaSemana === 6) {
+            alert("Por favor, selecione um dia útil (segunda a sexta).");
+            this.value = ""; // limpa a seleção inválida
+            }
+        });
+        // Send in DD-MM-YYYY format
+        document.querySelector("form").addEventListener("submit", function (e) {
+            const dataInput = inputData.value;
+            if (dataInput) {
+            const [ano, mes, dia] = dataInput.split("-");
+            const dataFormatada = `${dia}-${mes}-${ano}`;
+            const hidden = document.createElement("input");
+            hidden.type = "hidden";
+            hidden.name = "data_agendamento_formatada";
+            hidden.value = dataFormatada;
+            this.appendChild(hidden);
+            }
+        });
+        // Verify if form can enable the button
         function verificarFormulario() {
             let todosPreenchidos = form.checkValidity();
             let identidadeNumeros = identidadeInput.value.replace(/\D/g,'');
