added more photos on media section

--- a/index.html
+++ b/index.html
@@ -581,15 +581,16 @@
                     Veja como foi o Casamento Comunitário realizado em 01/11/2025 pelo Cartório Ribeirão da Ilha no Boulevard 1432 do Aeroporto de Florianópolis. 
                     Saiba mais no nosso <a href="https://www.instagram.com/cartorioribeiraodailha/" target="_blank" class="text-reset links-socials">Instagram</a>.
                 </p>
-                <!--
-                <div class="container banner d-sm-block d-md-flex d-lg-flex pt-5 pb-5 mx-auto gap-5">
+                <div class="container banner d-block mx-auto gap-5">
                     <video class="video-reels-wedding reels-card mx-auto d-block mb-4" 
                         loop muted playsinline controls poster="./src/img/posterwedding.webp">
                         <source src="./src/video/casamentocoletivo.mp4" type="video/mp4">
                     </video>
+                    <p class="text text-center animation-down">
+                        Assista ao Reels original do Floripa Airport <a href="https://www.instagram.com/cartorioribeiraodailha/" target="_blank" class="text-reset links-socials">clicando aqui</a>.
+                    </p>
                 </div>
-                -->
-
+                
                 <div id="carouselCards" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active carousel-insta" data-bs-interval="5000">
@@ -611,27 +612,44 @@
                                 </div>
                             </div>
                         </div>
-                        <!--
                         <div class="carousel-item carousel-insta">
                             <div class="d-flex justify-content-between">
                                 <div class="card-carousel">
                                     <div class="card-carousel-body">
-                                        <img src="./src/img/feedback3.webp" draggable="false" class="video-reels reels-card mx-auto d-block my-2">
+                                        <img src="./src/img/casamento4.webp" draggable="false" class="video-reels reels-card mx-auto d-block my-2">
                                     </div>
                                 </div>
                                 <div class="card-carousel">
                                     <div class="card-carousel-body">
-                                        <img src="./src/img/feedback5.webp" draggable="false" class="video-reels reels-card mx-auto d-block my-2">
+                                        <img src="./src/img/casamento5.webp" draggable="false" class="video-reels reels-card mx-auto d-block my-2">
                                     </div>
                                 </div>
                                 <div class="card-carousel">
                                     <div class="card-carousel-body">
-                                        <img src="./src/img/feedback1.webp" draggable="false" class="video-reels reels-card mx-auto d-block my-2">
+                                        <img src="./src/img/casamento6.webp" draggable="false" class="video-reels reels-card mx-auto d-block my-2">
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        -->
+                        <div class="carousel-item carousel-insta">
+                            <div class="d-flex justify-content-between">
+                                <div class="card-carousel">
+                                    <div class="card-carousel-body">
+                                        <img src="./src/img/casamento7.webp" draggable="false" class="video-reels reels-card mx-auto d-block my-2">
+                                    </div>
+                                </div>
+                                <div class="card-carousel">
+                                    <div class="card-carousel-body">
+                                        <img src="./src/img/casamento8.webp" draggable="false" class="video-reels reels-card mx-auto d-block my-2">
+                                    </div>
+                                </div>
+                                <div class="card-carousel">
+                                    <div class="card-carousel-body">
+                                        <img src="./src/img/casamento9.webp" draggable="false" class="video-reels reels-card mx-auto d-block my-2">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 
